--- a/css/frame.css
+++ b/css/frame.css
@@ -1,69 +1,430 @@
+/*전체*/
 body {
+    color: #224148;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
     height: 100vh;
     overflow: auto;
-    min-width: 770px;
+    min-width: 800px;/*1920 * 1080 기준 수정*/
 }
 ul{
     list-style-type: none;
     padding: 0;
 }
+@font-face {
+    font-family: 'Dovemayo_gothic';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.1/Dovemayo_gothic.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-size: 18px;
+}
+/*header*/
+    /*main menu*/
+    /* 배너와 네비게이션 스타일 ---------------------------------------------*/
+    .nav_section {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    
+    .top-menu-item {
+        list-style: none;
+        margin: 10px;
+    }
+    /*@media screen and (max-width: 100%) {
+        .nav_section {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+      }*/ /*추후 여유되면 전체 수정. 우선 삭제.*/
+    #myButton {
+        display: none;
+        position: fixed;
+        bottom: 1%;
+        right: 20px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: rgb(0, 0, 0);
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 4px;
+    }
+
+    nav {
+    /* 로고 */
+        padding-top: 0.3%;
+        width: 20%;
+        padding: auto;
+        font-size: 18px;
+        margin-right: -5%;
+    }
+
+    nav>li>a {
+        white-space: nowrap;
+        /* 호버시 글씨 밑으로 내려감 방지 */
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .menu-content>li {
+        position: relative;
+        list-style-type: none;
+        text-align: left;
+    }
+
+    .menu-content>li>a {
+        position: relative;
+        text-align: center;
+        display: block;
+        padding: 15% 15%;
+        color: #333;
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 26px;
+    }
+
+
+    .top-menu-item {
+        margin-left: 20px;
+        margin-right: 25px;
+    }
+
+    .top-menu-item:first-child {
+        margin-left: 0;
+    }
+
+    .top-menu-item:last-child {
+        margin-right: 0;
+    }
+
+
+    .nav>li>a {
+        margin-left: 60%;
+        text-decoration: none;
+
+    }
+
+    .container {
+        position: absolute;
+        bottom: 10%;
+        background-color: #ffffff;
+        transition: 0.5s ease;
+        display: flex;
+        overflow: hidden;
+    }
+
+    .menu:hover .container {
+        bottom: 70%;
+        overflow: hidden;
+    }
+
+    .menu {
+        /*margin-top: -1%;*/
+        /*margin-bottom: -1%;*//*이부분 때문에 다른데에서 가져가면 글씨 잘리는 데 이거 필요한 건 가요?*/
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    section {
+        /* 메뉴바 중간 */
+        align-items: center;
+        justify-content: center;
+        width: 55%;
+        display: flex;
+        white-space: nowrap;
+        /* 글씨 밑으로 내려감 방지 */
+        text-overflow: ellipsis;
+        padding-top: 0.5%;
+    }
+
+    .banner {
+        overflow: hidden;
+        margin-bottom: 1%;
+        list-style-type: none;
+        /* 앞에 점 지우기 */
+        display: block;
+        background-color: #ffffff;
+        /* 메뉴바 색상 */
+        width: 100%;
+
+    }
+
+    .nav_section .nav {
+        padding: 0.5%;
+        list-style-type: none;
+        /* 앞에 점 지우기 */
+        display: flex;
+        /* Flex 컨테이너로 지정합니다. */
+        align-items: center;
+        /* 가로 축(세로선) 기준으로 중앙 정렬합니다. */
+        margin-top: 1.2%;
+        font-size: 18px;
+        /* 로고의 글자 크기 */
+    }
+
+    /* 네비게이션 링크 스타일 */
+
+    section a:hover {
+        color: #6b97f7;
+        /* 호버 상태일 때의 색상 */
+    }
+
+    /* 입력 필드 스타일 조정 */
+    aside {
+        padding-top: 0.3%;
+        width: 25%;
+        position: relative;
+        display: flex;
+        white-space: nowrap;
+        /* 호버시 글씨 밑으로 내려감 방지 */
+        text-overflow: ellipsis;
+    }
+
+    aside #searchBtn{
+        margin-top: 0.3%;
+        margin-left: 0.5%;
+        /* 박스의 넓이 */
+        /* 내부 여백 */
+        background-color: #ffffff;
+        /* 백그라운드 색상 */
+        border: 2px solid black;
+        /* 박스의 테두리 */
+    }
+
+    aside #loginBtn {
+        width: 50%;
+        /* 박스의 넓이 */
+        color: #ffffff;
+        /* 내부 여백 */
+        background-color: rgb(68, 68, 68);
+        /* 백그라운드 색상 */
+        border: 1px solid black;
+        /* 박스의 테두리 */
+    }
+
+    aside #JoinBtn{
+        margin-left: 10px;
+        /* 박스의 넓이 */
+        color: #ffffff;
+        /* 내부 여백 */
+        background-color: rgb(68, 68, 68);
+        /* 백그라운드 색상 */
+        border: 1px solid black;
+        /* 박스의 테두리 */
+    }
+
+    aside #searchBtn, aside #loginBtn, aside #JoinBtn {
+        border-radius: 10px;  /* 원하는 둥근 정도를 픽셀로 지정 */
+    }
+
+    aside .login {
+        padding-top: 0.3%;
+        padding-left: 5%
+    }
+
+
+
+/*content*/
 #frameContent {
     display: flex;
 }
+    /*nav*/
+    #nav {
+        min-width: 200px;
+        min-height: 100vh;
+        padding: 17px;
+        border-right:#A0E3F2 solid 3px;
+        font-weight: bolder;
+    }
+    #nav > ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        color: #1B1F28;
+    }
+    #smallNav > div{
+        min-height: calc(100vh - 100px);
+    }
+    #smallNav > #navGradient{
+        margin-top: 0;
+    }
+    #nav> ul > li {
+        margin-bottom: 15px;
+        font-weight: bold;
+    }
+    #nav>ul>div>li{
+        margin: 0 8px 0 8px;
+        padding-top: 2px;
+    }
+    #nav ul ul{
+        margin-top: 5px;
+        padding-bottom: 20px;
+    }
+    #nav ul ul li {
+        font-weight:550;
+        font-size: 0.8em;
+        color: lightslategray;
+        margin-bottom: 6px;
+        margin-left: 25px;
+    }
 
-#nav {
-    width: 200px;
-    min-height: 100vh;
-    padding: 17px;
-    /*background-color: #CAE9FF;*/
-    border-right:#CAE9FF solid 3px;
-    /*background-image: url('./img/KakaoTalk_20240307_195544950_04.jpg');
-    background-size: cover;*/
-    box-sizing: border-box;
+    /*page contennt*/
+    #content {
+        min-width: 800px;/*1920*1080기준 px로 수정*/
+        padding: 100px ;
+        border-right: #A0E3F2 solid 3px;
+    }
 
-    font-weight: bolder;
-    border-right: #CAE9FF solid;
-}
-#nav > ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    color: #1B1F28;
-}
-#smallNav > div{
-    min-height: calc(100vh - 100px);
-}
-#smallNav > #navGradient{
-    margin-top: 0;
-}
-#nav> ul > li {
-    margin-bottom: 15px;
-    font-weight: bold;
-}
-#nav>ul>div>li{
-    margin: 0 8px 0 8px;
-    padding-top: 2px;
-}
-#nav ul ul{
-    margin-top: 5px;
-    padding-bottom: 20px;
-}
-#nav ul ul li {
-    font-weight:550;
-    font-size: 0.8em;
-    color: lightslategray;
-    margin-bottom: 6px;
-    margin-left: 25px;
-}
+/*footer*/
+    /*site map*/
 
-/*contennt*/
-#content {
+    /* footer 풋터 -----------------------------------------------------------------------------*/
+    footer .sns_list .tit {
+        display: inline-block;
+        margin-top: 2%;
+        padding-left: 3.3%;
+        color: #333;
+        font-size: 30px;
+    }
 
-    width: 75%;
-    padding: 5% ;
-    box-sizing: border-box;
-    border-right: #36404E solid 1px;
-}
+    footer .sns_list {
+        /* 여행 후기를 SNS에 남겨주세요!  */
+        display: flex;
+        justify-content: center;
+        clear: both;
+        text-align: center;
+    }
+
+    footer ul>li {
+        list-style-type: none;
+        display: inline-block;
+        /* 앞에 점 지우기 */
+    }
+
+    footer .sns_list .icon {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        background-repeat: no-repeat;
+        background-position: 0 0;
+        background-size: 40px 40px;
+        vertical-align: middle;
+    }
+
+    footer .sns_list .sns_name {
+
+        display: inline-block;
+        margin-left: 0.3%;
+        color: #666;
+        font-size: 15px;
+        vertical-align: middle;
+        text-align: left;
+    }
+
+    footer .sns_list ul {
+        /* 아이콘 */
+        padding: 0.2%;
+        display: flex;
+        margin-left: 10%;
+        justify-content: space-between;
+    }
+
+    /* sns 아이콘 */
+    footer .sns_list .icon_blog {
+        background-image: url(../icon/sns1.png);
+    }
+
+    footer .sns_list li:hover .icon_blog {
+        background-image: url(../icon/sns1-2.png);
+    }
+
+    footer .sns_list .icon_post {
+        background-image: url(../icon/sns2.png);
+    }
+
+    footer .sns_list li:hover .icon_post {
+        background-image: url(../icon/sns2-2.png);
+    }
+
+    footer .sns_list .icon_band {
+        background-image: url(../icon/sns3.png);
+    }
+
+    footer .sns_list li:hover .icon_band {
+        background-image: url(../icon/sns3-2.png);
+    }
+
+    footer .sns_list .icon_facebook {
+        background-image: url(../icon/sns4.png);
+    }
+
+    footer .sns_list li:hover .icon_facebook {
+        background-image: url(../icon/sns4-2.png);
+    }
+
+    footer .sns_list .icon_twitter {
+        background-image: url(../icon/sns5.png);
+    }
+
+    footer .sns_list li:hover .icon_twitter {
+        background-image: url(../icon/sns5-2.png);
+    }
+
+    footer .sns_list .icon_kakaostory {
+        background-image: url(../icon/sns6.png);
+    }
+
+    footer .sns_list li:hover .icon_kakaostory {
+        background-image: url(../icon/sns6-2.png);
+    }
+
+    footer .sns_list .icon_instagram {
+        background-image: url(../icon/sns7.png);
+    }
+
+    footer .sns_list li:hover .icon_instagram {
+        background-image: url(../icon/sns7-2.png);
+    }
+
+    /*-----------------------------------------------------*/
+
+    .btm_menu a {
+        display: flex;
+        white-space: nowrap;
+        /* 호버시 글씨 밑으로 내려감 방지 */
+        text-overflow: ellipsis;
+        margin-left: 10px;
+        color: #666;
+        font-size: 20px;
+        letter-spacing: -0.25px;
+    }
+
+    a:link,
+    a:visited,
+    a:hover,
+    a:focus,
+    a:active {
+        
+        text-decoration: none;
+    }
+
+    footer .badak {
+        
+        position: relative;
+        /* 상대 위치 지정 */
+        display: flex;
+    }
+
+    footer .badak>div {
+        position: absolute;
+        /* 절대 위치 지정 */
+        right: 5%;
+        /* 우측에서 0의 위치에 배치 */
+    }
+    /*-----------------------------------------------------*/
